Fix AA contrast failure for deprecated guidance popovers

--- a/stylesheets/_deprecated.styles.scss
+++ b/stylesheets/_deprecated.styles.scss
@@ -485,17 +485,13 @@ $rich-list-item-text-selected-color:  color(white) !default;
 .input-group-guidance {
     background-color: color(white);
     border: 0;
-    color: color(jadu-blue);
+    color: color(text);
     font-size: $font-size-base;
     font-weight: normal;
     line-height: 24px;
     padding: 0 $padding-base-horizontal;
     text-align: center;
     vertical-align: baseline;
-
-    &:hover {
-        color: color(jadu-blue, dark);
-    }
 
     // Nuke default margins from checkboxes and radios to vertically center within.
     input[type="radio"],
